# esp-async-console

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  async_console.c  async_console.h  async_console_io.c  async_console_io.h  async_console_log.c  async_console_log.h  idf_component.yml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml
examples/basic_repl/: CMakeLists.txt  idf_component.yml  sdkconfig.defaults
examples/basic_repl/main/: idf_component.yml  main.c
linenoise/: async_linenoise.c  async_linenoise.h  linenoise.c  linenoise.h
